Add centre on location button and hide keyboard after searching

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -32,8 +32,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toRightOf="@id/ic_magnify"
+        android:layout_toEndOf="@id/ic_magnify"
         android:layout_centerVertical="true"
+        android:inputType="textAutoComplete"
         android:textSize="15sp"
         android:textColor="#000"
         android:id="@+id/input_search"
@@ -41,5 +42,16 @@
         android:hint="Enter Building, Address or Zip Code"/>
 
 </RelativeLayout>
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/relLayout1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/ic_gps"
+        android:src="@drawable/ic_gps"/>
 
     </RelativeLayout>
