Add get nearest microwave and see all microwave buttons

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -54,4 +54,26 @@
         android:id="@+id/ic_gps"
         android:src="@drawable/ic_gps"/>
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignStart="@id/relLayout1"
+        android:layout_above="@id/ic_find_nearest"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/ic_show_all"
+        android:src="@drawable/ic_show_all"/>
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignStart="@id/relLayout1"
+        android:layout_alignBottom="@id/map"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/ic_find_nearest"
+        android:src="@drawable/ic_get_nearest"/>
+
     </RelativeLayout>
