--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:text="@string/find_microwave" />
+        android:text="@+string/find_microwave" />
 
     <Button
         android:id="@+id/SettingsMenu"
