--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,9 +10,8 @@
         android:id="@+id/FindMicrowave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="@+string/find_microwave" />
+        android:layout_centerInParent="true"
+        android:text="@string/find_microwave" />
 
     <Button
         android:id="@+id/SettingsMenu"
