--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
         android:text="@string/find_microwave" />
 <!--
     <Button
@@ -32,5 +33,5 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/startscreen" />
+        app:srcCompat="@drawable/homescreenfinal" />
 </RelativeLayout>
